--- a/idenx.html
+++ b/idenx.html
@@ -1,4 +1,7 @@
-texto <html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Mi primera Pagina</title>
 
-
+    </head>
 </html>
